
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int vname ;


 int LOCK_EX ;
 int O_CREAT ;
 int O_RDWR ;
 int S_IRWXU ;
 int flock (int,int ) ;
 int getpid () ;
 int open (char*,int,int ) ;
 int perror (char*) ;
 int printf (char*) ;
 int snprintf (char*,int,char*,int,int) ;

void createfile(){
int nm1, filev;
char vname[424];

for(nm1=0;nm1<920;nm1++){
 snprintf(vname, sizeof(vname), "UNLOCKRESEARCHTEAM%d.%d", getpid(), nm1);
 filev = open(vname, O_CREAT|O_RDWR, S_IRWXU);
 if(filev < 0){
  printf("ERROR\n");
  perror("open()");
 }
 if(flock(filev,LOCK_EX) == -1){
  printf("ERROR\n");
  perror("flock()");
 }
}
while(42);
}
