; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_904.c_createfile.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_904.c_createfile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [24 x i8] c"UNLOCKRESEARCHTEAM%d.%d\00", align 1
@O_CREAT = common dso_local global i32 0, align 4
@O_RDWR = common dso_local global i32 0, align 4
@S_IRWXU = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [7 x i8] c"ERROR\0A\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"open()\00", align 1
@LOCK_EX = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [8 x i8] c"flock()\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @createfile() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca [424 x i8], align 16
  store i32 0, i32* %1, align 4
  br label %4

4:                                                ; preds = %32, %0
  %5 = load i32, i32* %1, align 4
  %6 = icmp slt i32 %5, 920
  br i1 %6, label %7, label %35

7:                                                ; preds = %4
  %8 = getelementptr inbounds [424 x i8], [424 x i8]* %3, i64 0, i64 0
  %9 = call i32 (...) @getpid()
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @snprintf(i8* %8, i32 424, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i32 %9, i32 %10)
  %12 = getelementptr inbounds [424 x i8], [424 x i8]* %3, i64 0, i64 0
  %13 = load i32, i32* @O_CREAT, align 4
  %14 = load i32, i32* @O_RDWR, align 4
  %15 = or i32 %13, %14
  %16 = load i32, i32* @S_IRWXU, align 4
  %17 = call i32 @open(i8* %12, i32 %15, i32 %16)
  store i32 %17, i32* %2, align 4
  %18 = load i32, i32* %2, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %7
  %21 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %22 = call i32 @perror(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  br label %23

23:                                               ; preds = %20, %7
  %24 = load i32, i32* %2, align 4
  %25 = load i32, i32* @LOCK_EX, align 4
  %26 = call i32 @flock(i32 %24, i32 %25)
  %27 = icmp eq i32 %26, -1
  br i1 %27, label %28, label %31

28:                                               ; preds = %23
  %29 = call i32 @printf(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0))
  %30 = call i32 @perror(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0))
  br label %31

31:                                               ; preds = %28, %23
  br label %32

32:                                               ; preds = %31
  %33 = load i32, i32* %1, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %1, align 4
  br label %4

35:                                               ; preds = %4
  br label %36

36:                                               ; preds = %35, %36
  br label %36
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32, i32) #1

declare dso_local i32 @getpid(...) #1

declare dso_local i32 @open(i8*, i32, i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @flock(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
